--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sa.gov.mohe.mtokhais.testapp" >
+    package="sa.gov.mohe.mtokhais.testapp">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -13,10 +14,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme" >
+        android:theme="@style/Theme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,9 +26,9 @@
         </activity>
         <activity
             android:name=".AddingGiftActivity"
+            android:configChanges="orientation"
             android:label="@string/title_activity_adding_gift"
             android:parentActivityName=".MainActivity"
-            android:configChanges="orientation"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -36,7 +37,7 @@
         <activity
             android:name=".ImageSelecterActivity"
             android:label="@string/title_activity_image_selecter"
-            android:parentActivityName=".AddingGiftActivity" >
+            android:parentActivityName=".AddingGiftActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sa.gov.mohe.mtokhais.testapp.AddingGiftActivity" />
@@ -44,11 +45,12 @@
         <activity
             android:name=".CrapImageActivity"
             android:label="@string/title_activity_crap_image"
-            android:parentActivityName=".AddingGiftActivity" >
+            android:parentActivityName=".AddingGiftActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sa.gov.mohe.mtokhais.testapp.AddingGiftActivity" />
         </activity>
+        <activity android:name=".ViewGiftActivity"></activity>
     </application>
 
 </manifest>
