--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "sa.gov.mohe.mtokhais.testapp"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,13 +21,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.android.support:support-annotations:22.2.0'
+    compile 'com.android.support:support-annotations:23.4.0'
     compile 'se.emilsjolander:stickylistheaders:2.6.0'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
     compile 'com.wdullaer:materialdatetimepicker:2.1.1'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
 }
