--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
+//    compile 'com.android.support.constraint:constraint-layout:2.0.0'
 }
